--- a/Contador/TopLevel.qsf
+++ b/Contador/TopLevel.qsf
@@ -279,4 +279,6 @@ set_global_assignment -name VHDL_FILE conversorHex7Seg.vhd
 set_global_assignment -name VHDL_FILE buffer_3_state_8portas.vhd
 set_global_assignment -name VHDL_FILE LogicKeySwitch.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
